--- a/Tracking Buses SE/Podfile
+++ b/Tracking Buses SE/Podfile
@@ -1,5 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 target 'Tracking Buses SE' do
-    pod 'GoogleMaps', '= 2.6.0'
+    pod 'GooglePlaces'
 end
